updated new document init and style updater tools and provided documentation for the structure of the lpit.yaml file

--- a/styles/lpitYaml.jinja2
+++ b/styles/lpitYaml.jinja2
@@ -11,9 +11,15 @@ title:
 authors:
   - given: <<>>
     family: <<>>
-    prefix: <<>>
-    suffix: <<>>
-    order: <<givenFamily | familyCommaGiven>>
+    prefix: <<>> # optional
+    suffix: <<>> # optional
+    order: <<givenFamily | familyCommaGiven>> # optional
+    email: <<>> #optional
+
+packages:
+  - location: <<>> # optional 
+    name: <<>
+    version: <<>>
 
 abstract: |
   <<>>
