--- a/styles/paper/typstTemplates/frontMatter.jinja2
+++ b/styles/paper/typstTemplates/frontMatter.jinja2
@@ -2,15 +2,7 @@
 ///////////////////////////////////////////////
 // Front matter
 
-// #lpitDocument("{{docId}}",
-//  shortTitle: [ {{shortTitle}} ],
-//  longTitle: [ {{longTitle}} ])
+#setupDoc(yaml("lpit.yaml"))
 
-// \author{ {{ authors}} }
-
-// \maketitle
-
-// #abstract[
-//   {{abstract}}
-// ]
+#abstract([ {{abstract}} ])
 
