--- a/lpitPublisher/templates/base.html
+++ b/lpitPublisher/templates/base.html
@@ -17,6 +17,8 @@
     integrity="sha384-hCXGrW6PitJEwbkoStFjeJxv+fSOOQKOPbJxSfM6G5sWZjAyWhXiTIIAmQqnlLlh"
     crossorigin="anonymous"
     onload="renderMathInElement(document.body);"></script>
+
+  <link href="/css/main.css" rel="stylesheet">
 </head>
 <body>
   {% block header %}
