updated lpit to use setupDocument as a typst template

--- a/styles/paper/typstTemplates/frontMatter.jinja2
+++ b/styles/paper/typstTemplates/frontMatter.jinja2
@@ -2,7 +2,7 @@
 ///////////////////////////////////////////////
 // Front matter
 
-#setupDoc(yaml("lpit.yaml"))
+#show: doc=> setupDoc(yaml("lpit.yaml"), doc)
 
 #abstract([ {{abstract}} ])
 
