--- a/lpitPublisher/templates/websiteIndex.html
+++ b/lpitPublisher/templates/websiteIndex.html
@@ -12,6 +12,7 @@
 <ul>
   <li><a href="toc.html">Table of contents</a></li>
   <li><a href="labelIndex.html">Index of labels</a></li>
+  <li><a href="bibliography.html">Bibliograpy</a></li>
 </ul>
 {% endblock %}
 
