initial pass at indices of both theorems and figures

--- a/lpitPublisher/templates/websiteIndex.html
+++ b/lpitPublisher/templates/websiteIndex.html
@@ -11,7 +11,9 @@
 {% block content %}
 <ul>
   <li><a href="toc.html">Table of contents</a></li>
-  <li><a href="labelIndex.html">Index of labels</a></li>
+  <li><a href="labelIndex.html">Index of Labels</a></li>
+  <li><a href="theoremIndex.html">Index of Theorems</a></li>
+  <li><a href="figureIndex.html">Index of Figures</a></li>
   <li><a href="bibliography.html">Bibliograpy</a></li>
 </ul>
 {% endblock %}
