--- a/lpitPublisher/templates/labelIndex.html
+++ b/lpitPublisher/templates/labelIndex.html
@@ -11,15 +11,16 @@
 {% block content %}
 <ul>
 {% for key in labelLevels recursive %}
+{% set xKey = key.replace('-', '_') %}
 {% set item = labelLevels[key] %}
-  <li>
-    {{ key }}
+  <li x-data="{ open{{xKey}}: false, open{{xKey}}Desc: false }">
+    <span @click="open{{xKey}} = ! open{{xKey}}">&nbsp;{{ key }}&nbsp;</span>
     {% if key in labelsDesc %}
-    ({{labelsDesc[key]['type']}})
-    <div>{{labelsDesc[key]['desc'] | safe }}</div>
+    <span @click="open{{xKey}}Desc = ! open{{xKey}}Desc">({{labelsDesc[key]['type']}})</span>
+    <div class="border-4 border-blue-200" x-show="open{{xKey}}Desc">{{labelsDesc[key]['desc'] | safe }}</div>
     {% endif %}
     {% if key in labels %}
-      <div>
+      <div class="border-4 border-blue-200" x-show="open{{xKey}}">
       {% for aTarget in labels[key] %}
       {% set aDoc = aTarget[0] %}
       {% set aPage = aTarget[2] %}
@@ -28,7 +29,7 @@
       </div>
     {% endif %}
     {%- if item is mapping -%}
-      <ul>{{ loop(item) }}</ul>
+      <ul x-show="open{{xKey}}">{{ loop(item) }}</ul>
     {%- endif -%} 
   </li>
 {% endfor %}
